# ultrack-wrapper

./: DESIGN.md  TODO.md  WIDGET_PLAN_flow_watershed.md  pyproject.toml
scripts/: SWEEP_USAGE.md  analyze_sweep_results.py  compare_label_maps.py  detect_merges_splits.py  sweep_solve_params.py
src/ultrack_wrapper/: __init__.py  _config.py  _paths.py  _widget_contours.py  _widget_data_prep.py  _widget_foreground.py  _widget_tracking.py  napari.yaml  widget.py
src/ultrack_wrapper/processing/: flow_watershed.py  flow_watershed_postprocessing.py
src/ultrack_wrapper/runners/: local.py  script.py  terminal.py
src/ultrack_wrapper/stages/: s00_raw.py  s01a_cellpose_nucleus.py  s01b_cellpose_cell.py  s02_flow_watershed.py  s02_foreground.py  s02b_contours.py  s02c_cellpose_contours.py  s03_tracking.py  s04_project2d.py  s05_cell_labels.py
src/ultrack_wrapper/viewers/: loader.py
src/ultrack_wrapper/widgets/: __init__.py  cellpose.py  contours.py  flow_watershed.py  foreground.py  tracking.py  ultrack_widget.py
